--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 80px;
-  background-color: #3397DB;
+  background-color: #2833C9;
   align-items: center;
 }
 .filter-options h2 {
@@ -144,7 +144,7 @@ nav h1 a {
 #restaurants-list li {
   display: inline-block;
   background-color: #fff;
-  border: 2px solid #3489CB;
+  border: 2px solid #2833C9;
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
@@ -168,7 +168,7 @@ nav h1 a {
   border-radius: 10px;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #000;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -182,7 +182,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #795002;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -195,10 +195,16 @@ nav h1 a {
   transition-duration: 0.5s;
 }
 #restaurants-list li a:hover {
-  background-color: #F1F1F1;
+  background-color: #1D1C1C;
   border-bottom-color: orange;
-  color: orange;
+  color: white;
 }
+#restaurants-list li a:focus {
+  background-color: #1D1C1C;
+  border-bottom-color: orange;
+  color: white;
+}
+
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
@@ -263,8 +269,11 @@ nav h1 a {
 #reviews-container {
   padding: 30px 40px 80px;
 }
+#restaurant-container h1 {
+  color: #000;
+}
 #reviews-container h2 {
-  color: #f58500;
+  color: #000;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
